--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Jinja2 >=2.7,<3.0
 -e git+https://github.com/python-edgy/event.git@master#egg=edgy.event
 
+pylint
+
 nose >=1.3,<1.4
 coverage >=3.7,<3.8
