--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Jinja2 >=2.7,<3.0
--e git+https://github.com/python-edgy/event.git@master#egg=edgy.event
+edgy.event >=0.1,<0.2
 
-pylint
-
+pylint >=1.4,<1.5
 nose >=1.3,<1.4
 coverage >=3.7,<3.8
