new: now using py.test as the default testing harness, new conventions for test placement inspired from sentry project

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+*.egg-info
 *.pyc
 *.swp
-/.python*-*
+/.cache
 /.coverage
+/.idea
+/.python*-*
 /build
 /dist
-*.egg-info
-/.idea
+/htmlcov
+/pylint.html
