--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Jinja2 >=2.7,<3.0
+coverage >=4.0,<4.2
 edgy.event >=0.1,<0.2
-
+mock >=1.3,<1.4
 pylint >=1.4,<1.5
-nose >=1.3,<1.4
-coverage >=3.7,<3.8
+pytest >=2.8,<2.9
+pytest-cov >=2.2,<2.3
