trying to speed up CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ python:
   - nightly
   - pypy
 install:
-  - make
+  - make install-dev
 script:
-  - make clean
-  - make doc
-  - make test
+  - make clean doc test
