struggling with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - make install-dev
   - python setup.py --name
   - python setup.py --version
+  - pip --version
   - pip install -U coveralls
 script:
   - make clean docs test
