--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 -e .
+
+blessings==1.6
+click==6.7
+edgy.event==0.1.10
+first==2.0.1
+jinja2==2.9.6
+markupsafe==1.0
+pbr==3.0.0
+pip-tools==1.9.0
+six==1.10.0
+stevedore==1.21.0
+tornado==4.5.1
+yapf==0.16.1
