--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,10 +13,11 @@ py==1.4.34
 pygments==2.2.0
 pytest-cov==2.5.1
 pytest==3.2.3
-pytz==2017.2
+pytz==2017.3
 requests==2.18.4
 six==1.11.0
 snowballstemmer==1.2.1
-sphinx==1.6.4
+sphinx==1.6.5
 sphinxcontrib-websupport==1.0.1
 urllib3==1.22
+yapf==0.19.0
