--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 -e .
 blessings==1.6
 click==6.7
+colorama==0.3.9
 first==2.0.1
+git-semver==0.1.6
+gitdb2==2.0.3
+gitpython==2.1.7
 jinja2==2.9.6
 markupsafe==1.0
+mondrian==0.2.0
 pbr==3.1.1
 pip-tools==1.10.1
+semantic-version==2.6.0
 six==1.11.0
+smmap2==2.0.3
 stevedore==1.27.1
-tornado==4.5.2
 whistle==1.0a3
 yapf==0.19.0
