--- a/config/conda.yml
+++ b/config/conda.yml
@@ -1,19 +1,24 @@
 name: py35
 dependencies:
 - pip=9.0.1=py35_0
-- python=3.5.2=0
-- setuptools=20.3=py35_0
-- wheel=0.29.0=py35_0
+- python=3.5.4=0
+- setuptools=36.6.0=py35_0
+- wheel=0.30.0=py35_0
 - pip:
-  - blessings==1.6
   - click==6.7
-  - whistle==1.0a3
+  - colorama==0.3.9
   - first==2.0.1
+  - git-semver==0.2.1
+  - gitdb2==2.0.3
+  - gitpython==2.1.7
   - jinja2==2.9.6
   - markupsafe==1.0
+  - mondrian==0.3.0
   - pbr==3.1.1
   - pip-tools==1.10.1
+  - semantic-version==2.6.0
   - six==1.11.0
+  - smmap2==2.0.3
   - stevedore==1.27.1
-  - tornado==4.5.2
+  - whistle==1.0a3
   - yapf==0.19.0
