--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 -e .[dev]
 alabaster==0.7.10
+attrs==17.3.0
 babel==2.5.1
 certifi==2017.11.5
 chardet==3.0.4
@@ -9,10 +10,11 @@ idna==2.6
 imagesize==0.7.1
 jinja2==2.10
 markupsafe==1.0
-py==1.4.34
+pluggy==0.6.0
+py==1.5.2
 pygments==2.2.0
 pytest-cov==2.5.1
-pytest==3.2.3
+pytest==3.3.0
 pytz==2017.3
 requests==2.18.4
 six==1.11.0
@@ -20,4 +22,4 @@ snowballstemmer==1.2.1
 sphinx==1.6.5
 sphinxcontrib-websupport==1.0.1
 urllib3==1.22
-yapf==0.19.0
+yapf==0.20.0
