--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,26 +1,31 @@
 -e .[dev]
+-r requirements.txt
 alabaster==0.7.10
 attrs==17.4.0
 babel==2.5.3
 certifi==2018.1.18
 chardet==3.0.4
-coverage==4.4.2
+coverage==4.5.1
 docutils==0.14
 idna==2.6
-imagesize==0.7.1
+imagesize==1.0.0
 jinja2==2.10
 markupsafe==1.0
+packaging==16.8
 pluggy==0.6.0
 py==1.5.2
 pygments==2.2.0
+pyparsing==2.2.0
 pytest-cov==2.5.1
-pytest==3.4.0
-pytz==2017.3
+pytest-sugar==0.9.1
+pytest==3.4.1
+pytz==2018.3
 requests==2.18.4
 six==1.11.0
 snowballstemmer==1.2.1
 sphinx-sitemap==0.2
-sphinx==1.6.6
+sphinx==1.7.1
 sphinxcontrib-websupport==1.0.1
+termcolor==1.1.0
 urllib3==1.22
-yapf==0.20.1
+yapf==0.20.2
