--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ gitpython==2.1.8
 jinja2==2.10
 markupsafe==1.0
 mondrian==0.6.2
+packaging==17.1
 pbr==3.1.1
 pip-tools==1.11.0
+pyparsing==2.2.0
 semantic-version==2.6.0
 six==1.11.0
 smmap2==2.0.3
