--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - make install-dev
   - pip install coveralls
 script:
-  - make test
+  - make clean test
 after_success:
   - coveralls
