Update project assets & requirements.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,19 +11,20 @@ idna==2.6
 imagesize==1.0.0
 jinja2==2.10
 markupsafe==1.0
+more-itertools==4.1.0
 packaging==17.1
 pluggy==0.6.0
-py==1.5.2
+py==1.5.3
 pygments==2.2.0
 pyparsing==2.2.0
 pytest-cov==2.5.1
-pytest==3.4.2
+pytest==3.5.0
 pytz==2018.3
 requests==2.18.4
 six==1.11.0
 snowballstemmer==1.2.1
 sphinx-sitemap==0.2
-sphinx==1.7.1
+sphinx==1.7.2
 sphinxcontrib-websupport==1.0.1
 urllib3==1.22
 yapf==0.21.0
