--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,9 @@
 -e .[dev]
 -r requirements.txt
 alabaster==0.7.10
-attrs==17.4.0
-babel==2.5.3
+atomicwrites==1.1.5
+attrs==18.1.0
+babel==2.6.0
 certifi==2018.4.16
 chardet==3.0.4
 coverage==4.5.1
@@ -11,20 +12,20 @@ idna==2.6
 imagesize==1.0.0
 jinja2==2.10
 markupsafe==1.0
-more-itertools==4.1.0
+more-itertools==4.2.0
 packaging==17.1
 pluggy==0.6.0
 py==1.5.3
 pygments==2.2.0
 pyparsing==2.2.0
 pytest-cov==2.5.1
-pytest==3.5.0
+pytest==3.6.0
 pytz==2018.4
 requests==2.18.4
 six==1.11.0
 snowballstemmer==1.2.1
 sphinx-sitemap==0.2
-sphinx==1.7.2
+sphinx==1.7.5
 sphinxcontrib-websupport==1.0.1
 urllib3==1.22
-yapf==0.21.0
+yapf==0.22.0
