--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,20 +12,21 @@ idna==2.7
 imagesize==1.0.0
 jinja2==2.10
 markupsafe==1.0
-more-itertools==4.2.0
+more-itertools==4.3.0
 packaging==17.1
-pluggy==0.6.0
-py==1.5.3
+pathlib2==2.3.2
+pluggy==0.7.1
+py==1.5.4
 pygments==2.2.0
 pyparsing==2.2.0
 pytest-cov==2.5.1
-pytest==3.6.1
-pytz==2018.4
+pytest==3.7.1
+pytz==2018.5
 requests==2.19.1
 six==1.11.0
 snowballstemmer==1.2.1
 sphinx-sitemap==0.2
-sphinx==1.7.5
+sphinx==1.7.6
 sphinxcontrib-websupport==1.1.0
 urllib3==1.23
 yapf==0.22.0
