--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,32 +1,34 @@
 -e .[dev]
 -r requirements.txt
-alabaster==0.7.11
-atomicwrites==1.1.5
-attrs==18.1.0
+alabaster==0.7.12
+atomicwrites==1.3.0
+attrs==19.1.0
 babel==2.6.0
-certifi==2018.4.16
+certifi==2019.3.9
 chardet==3.0.4
-coverage==4.5.1
+coverage==4.5.3
 docutils==0.14
-idna==2.7
-imagesize==1.0.0
+idna==2.8
+imagesize==1.1.0
 jinja2==2.10
-markupsafe==1.0
-more-itertools==4.3.0
-packaging==17.1
-pathlib2==2.3.2
-pluggy==0.7.1
-py==1.5.4
-pygments==2.2.0
-pyparsing==2.2.0
-pytest-cov==2.5.1
-pytest==3.7.1
-pytz==2018.5
-requests==2.19.1
-six==1.11.0
+markupsafe==1.1.1
+more-itertools==6.0.0
+packaging==19.0
+pathlib2==2.3.3
+pluggy==0.9.0
+py==1.8.0
+pygments==2.3.1
+pyparsing==2.3.1
+pytest-cov==2.6.1
+pytest==3.10.1
+pytz==2018.9
+releases==1.6.1
+requests==2.21.0
+semantic-version==2.6.0
+six==1.12.0
 snowballstemmer==1.2.1
-sphinx-sitemap==0.2
-sphinx==1.7.6
+sphinx-sitemap==1.0.2
+sphinx==1.7.9
 sphinxcontrib-websupport==1.1.0
-urllib3==1.23
-yapf==0.22.0
+urllib3==1.24.1
+yapf==0.26.0
