--- a/readthedocs-conda.yml
+++ b/readthedocs-conda.yml
@@ -1,25 +1,27 @@
 name: py36
 dependencies:
-- pip=9.0.1
+- pip=18.1
 - python=3.6
-- setuptools=38.2.3
-- wheel=0.30.0
+- setuptools=40.8.0
+- wheel=0.33.1
 - pip:
-  - click==6.7
+  - click==7.0
   - colorama==0.3.9
-  - first==2.0.1
-  - git-semver==0.2.1
-  - gitdb2==2.0.3
-  - gitpython==2.1.7
+  - first==2.0.2
+  - git-semver==0.2.3
+  - gitdb2==2.0.5
+  - gitpython==2.1.11
   - jinja2==2.10
-  - markupsafe==1.0
-  - mondrian==0.6.0
-  - pbr==3.1.1
-  - pip-tools==1.11.0
+  - markupsafe==1.1.1
+  - mondrian==0.8.0
+  - pbr==5.1.3
+  - pip-tools==2.0.2
   - semantic-version==2.6.0
-  - six==1.11.0
-  - smmap2==2.0.3
-  - sphinx-sitemap==0.2
-  - stevedore==1.27.1
-  - whistle==1.0.0
-  - yapf==0.20.0
+  - six==1.12.0
+  - smmap2==2.0.5
+  - stevedore==1.30.1
+  - whistle==1.0.1
+  - yapf==0.26.0
+  # Sphinx specific
+  - releases==1.6.1
+  - sphinx-sitemap==1.0.2
