--- a/readthedocs-conda.yml
+++ b/readthedocs-conda.yml
@@ -1,21 +1,22 @@
 name: py36
 dependencies:
-- pip=18.1
+- pip=19.0.3
 - python=3.6
 - setuptools=40.8.0
 - wheel=0.33.1
 - pip:
   - click==7.0
   - colorama==0.3.9
-  - first==2.0.2
   - git-semver==0.2.3
   - gitdb2==2.0.5
   - gitpython==2.1.11
   - jinja2==2.10
   - markupsafe==1.1.1
   - mondrian==0.8.0
+  - packaging==19.0
   - pbr==5.1.3
-  - pip-tools==2.0.2
+  - pip-tools==3.5.0
+  - pyparsing==2.3.1
   - semantic-version==2.6.0
   - six==1.12.0
   - smmap2==2.0.5
