--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,33 +4,33 @@ alabaster==0.7.12
 atomicwrites==1.3.0
 attrs==19.1.0
 babel==2.7.0
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
 coverage==4.5.3
 docutils==0.14
 idna==2.8
 imagesize==1.1.0
-importlib-metadata==0.17
-isort==4.3.20
+importlib-metadata==0.18
+isort==4.3.21
 jinja2==2.10.1
 markupsafe==1.1.1
-more-itertools==7.0.0
+more-itertools==7.1.0
 packaging==19.0
-pathlib2==2.3.3
 pluggy==0.12.0
 py==1.8.0
 pygments==2.4.2
 pyparsing==2.4.0
 pytest-cov==2.7.1
-pytest==3.10.1
+pytest==4.6.4
 pytz==2019.1
 releases==1.6.1
 requests==2.22.0
 semantic-version==2.6.0
 six==1.12.0
-snowballstemmer==1.2.1
+snowballstemmer==1.9.0
 sphinx-sitemap==1.0.2
 sphinx==1.7.9
 sphinxcontrib-websupport==1.1.2
 urllib3==1.25.3
+wcwidth==0.1.7
 zipp==0.5.1
