--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 -e .
+attrs==19.1.0
 click==7.0
 colorama==0.3.9
-git-semver==0.2.4
+git-semver==0.3.0
 gitdb2==2.0.5
-gitpython==2.1.11
+gitpython==2.1.14
 jinja2==2.10.1
 markupsafe==1.1.1
 mondrian==0.8.0
-packaging==19.0
-pbr==5.3.1
-pip-tools==3.8.0
-pyparsing==2.4.0
-semantic-version==2.6.0
+packaging==19.1
+pbr==5.4.3
+pip-tools==4.1.0
+pyparsing==2.4.2
+semantic-version==2.8.2
 six==1.12.0
 smmap2==2.0.5
-stevedore==1.30.1
+stevedore==1.31.0
 whistle==1.0.1
-yapf==0.27.0
+yapf==0.28.0
