--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
 -e .
-attrs==19.1.0
-click==7.0
+click==7.1.1
 colorama==0.3.9
-git-semver==0.3.1
-gitdb2==2.0.5
-gitpython==2.1.14
-jinja2==2.10.1
+git-semver==0.3.2
+gitdb==4.0.2
+gitpython==3.1.0
+jinja2==2.11.1
 markupsafe==1.1.1
 mondrian==0.8.0
-packaging==19.1
-pbr==5.4.3
-pip-tools==4.1.0
-pyparsing==2.4.2
-semantic-version==2.8.2
-six==1.12.0
-smmap2==2.0.5
-stevedore==1.31.0
+packaging==20.3
+pbr==5.4.4
+pip-tools==4.5.1
+pyparsing==2.4.6
+semantic-version==2.6.0
+six==1.14.0
+smmap==3.0.1
+stevedore==1.32.0
 whistle==1.0.1
-yapf==0.28.0
+yapf==0.29.0
