Update requirements, adds pre-commit hooks.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
 -e .
-click==7.1.1
+click==7.1.2
 colorama==0.3.9
 git-semver==0.3.2
-gitdb==4.0.2
-gitpython==3.1.0
-jinja2==2.11.1
+gitdb==4.0.5
+gitpython==3.1.11
+importlib-metadata==3.1.0
+jinja2==2.11.2
 markupsafe==1.1.1
 mondrian==0.8.0
-packaging==20.3
-pbr==5.4.4
+packaging==20.4
+pbr==5.5.1
 pip-tools==4.5.1
-pyparsing==2.4.6
+pyparsing==2.4.7
 semantic-version==2.6.0
-six==1.14.0
-smmap==3.0.1
-stevedore==1.32.0
+six==1.15.0
+smmap==3.0.4
+stevedore==3.2.2
 whistle==1.0.1
-yapf==0.29.0
+yapf==0.30.0
+zipp==3.4.0
