--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,35 +1,52 @@
 -e .[dev]
 -r requirements.txt
 alabaster==0.7.12
-attrs==19.3.0
-babel==2.8.0
-certifi==2019.11.28
+appdirs==1.4.4
+attrs==20.3.0
+babel==2.9.0
+black==20.8b1
+certifi==2020.11.8
+cfgv==3.2.0
 chardet==3.0.4
-coverage==4.5.4
+click==7.1.2
+coverage==5.3
+distlib==0.3.1
 docutils==0.16
-idna==2.9
+filelock==3.0.12
+identify==1.5.10
+idna==2.10
 imagesize==1.2.0
-importlib-metadata==1.6.0
-isort==4.3.21
-jinja2==2.11.1
+importlib-metadata==3.1.0
+iniconfig==1.1.1
+isort==5.6.4
+jinja2==2.11.2
 markupsafe==1.1.1
-more-itertools==8.2.0
-packaging==20.3
+mypy-extensions==0.4.3
+nodeenv==1.5.0
+packaging==20.4
+pathspec==0.8.1
 pluggy==0.13.1
-py==1.8.1
-pygments==2.6.1
-pyparsing==2.4.6
-pytest-cov==2.8.1
-pytest==5.4.1
-pytz==2019.3
+pre-commit==2.9.0
+py==1.9.0
+pygments==2.7.2
+pyparsing==2.4.7
+pytest-cov==2.10.1
+pytest==6.1.2
+pytz==2020.4
+pyyaml==5.3.1
+regex==2020.11.13
 releases==1.6.3
-requests==2.23.0
+requests==2.25.0
 semantic-version==2.6.0
-six==1.14.0
+six==1.15.0
 snowballstemmer==2.0.0
 sphinx-sitemap==1.1.0
 sphinx==1.8.5
-sphinxcontrib-websupport==1.2.1
-urllib3==1.25.8
-wcwidth==0.1.9
-zipp==3.1.0
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport==1.2.4
+toml==0.10.2
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.26.2
+virtualenv==20.2.1
+zipp==3.4.0
