--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,51 +2,57 @@
 -r requirements.txt
 alabaster==0.7.12
 appdirs==1.4.4
-attrs==20.3.0
-babel==2.9.0
+attrs==21.2.0
+babel==2.9.1
+backports.entry-points-selectable==1.1.0
 black==20.8b1
-certifi==2020.11.8
-cfgv==3.2.0
-chardet==3.0.4
-click==7.1.2
-coverage==5.3
-distlib==0.3.1
+certifi==2021.5.30
+cfgv==3.3.1
+charset-normalizer==2.0.4
+click==8.0.1
+coverage==5.5
+distlib==0.3.2
 docutils==0.16
 filelock==3.0.12
-identify==1.5.10
-idna==2.10
+identify==2.2.13
+idna==3.2
 imagesize==1.2.0
-importlib-metadata==3.1.0
+importlib-metadata==4.8.1
 iniconfig==1.1.1
-isort==5.6.4
-jinja2==2.11.2
-markupsafe==1.1.1
+isort==5.9.3
+jinja2==3.0.1
+markupsafe==2.0.1
 mypy-extensions==0.4.3
-nodeenv==1.5.0
-packaging==20.4
-pathspec==0.8.1
-pluggy==0.13.1
-pre-commit==2.9.0
-py==1.9.0
-pygments==2.7.2
+nodeenv==1.6.0
+packaging==21.0
+pathspec==0.9.0
+platformdirs==2.3.0
+pluggy==1.0.0
+pre-commit==2.9.3
+py==1.10.0
+pygments==2.10.0
 pyparsing==2.4.7
-pytest-cov==2.10.1
-pytest==6.1.2
-pytz==2020.4
-pyyaml==5.3.1
-regex==2020.11.13
+pytest-cov==2.12.1
+pytest==6.2.5
+pytz==2021.1
+pyyaml==5.4.1
+regex==2021.8.28
 releases==1.6.3
-requests==2.25.0
+requests==2.26.0
 semantic-version==2.6.0
-six==1.15.0
-snowballstemmer==2.0.0
+six==1.16.0
+snowballstemmer==2.1.0
 sphinx-sitemap==1.1.0
-sphinx==1.8.5
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport==1.2.4
+sphinx==3.5.4
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 toml==0.10.2
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-urllib3==1.26.2
-virtualenv==20.2.1
-zipp==3.4.0
+typed-ast==1.4.3
+typing-extensions==3.10.0.2
+urllib3==1.26.6
+virtualenv==20.7.2
+zipp==3.5.0
