--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 -e .
-click==7.1.2
-colorama==0.3.9
+click==8.0.1
+colorama==0.4.4
 git-semver==0.3.2
-gitdb==4.0.5
-gitpython==3.1.11
-importlib-metadata==3.1.0
-jinja2==2.11.2
-markupsafe==1.1.1
-mondrian==0.8.0
-packaging==20.4
-pbr==5.5.1
+gitdb==4.0.7
+gitpython==3.1.18
+importlib-metadata==4.8.1
+jinja2==2.11.3
+markupsafe==2.0.1
+mondrian==0.8.1
+packaging==20.9
+pbr==5.6.0
 pip-tools==4.5.1
 pyparsing==2.4.7
 semantic-version==2.6.0
-six==1.15.0
-smmap==3.0.4
-stevedore==3.2.2
+six==1.16.0
+smmap==4.0.0
+stevedore==3.4.0
+typing-extensions==3.10.0.2
 whistle==1.0.1
-yapf==0.30.0
-zipp==3.4.0
+yapf==0.31.0
+zipp==3.5.0
